# testing-with-ci-cd

./: pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  lint.yml  test-v1.yml  test-v2.yml  test-v3.yml  test.yml
test/: conftest.py
